# cc-triki

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
src/: entity-component-system.h  main.cpp  triqui.cpp  triqui.h
test_package/: conanfile.py
